More build setup

--- a/mod-shared/build.gradle
+++ b/mod-shared/build.gradle
@@ -30,3 +30,18 @@ dependencies {
     }
   }
 }
+
+sourceSets {
+  main {
+    java.srcDirs(
+      "src/accessor/java",
+      "src/mixin/java",
+      "src/client/java"
+    )
+    resources.srcDirs(
+      "src/accessor/resources/",
+      "src/mixin/resources/",
+      "src/client/resources/"
+    )
+  }
+}
