--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -36,6 +36,9 @@ config="adventure-platform-mod-shared.mixins.json"
 [[mixins]]
 config="adventure-platform-mod-shared.client.mixins.json"
 
+[[mixins]]
+config="adventure-platform-neoforge.mixins.json"
+
 # The [[accessTransformers]] block allows you to declare where your AT file is.
 # If this block is omitted, a fallback attempt will be made to load an AT from META-INF/accesstransformer.cfg
 #[[accessTransformers]]
