--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
   alias(libs.plugins.indra.checkstyle) apply false // needed for Gradle dependency resolution
   alias(libs.plugins.indra.sonatype)
   alias(libs.plugins.nexusPublish)
-  alias(libs.plugins.ideaExt)
+  // TODO alias(libs.plugins.ideaExt)
 }
 
 indraSonatype {
