switch from archloom to fabric loom

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,7 +62,7 @@ zCheckstyle = { module = "com.puppycrawl.tools:checkstyle", version.ref = "check
 [plugins]
 configurateTransformations = "ca.stellardrift.configurate-transformations:6.1.0"
 eclipseApt = "com.diffplug.eclipse.apt:4.0.1"
-loom = "xyz.jpenilla.quiet-architectury-loom:1.7.292"
+loom = "quiet-fabric-loom:1.7.292"
 ideaExt = "org.jetbrains.gradle.plugin.idea-ext:1.1.8"
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
