--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group=net.kyori
-version=5.14.2-SNAPSHOT
-description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric modding system
+version=6.0.0-SNAPSHOT
+description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric and NeoForge modding systems
 
 javadocPublishRoot=https://jd.advntr.dev/platform/
 
