--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,11 @@
       "description": "Correct Fabric API version handling",
       "matchPackageNames": ["net.fabricmc.fabric-api:fabric-api"],
       "versioning": "regex:^(?<major>\\d+)(\\.(?<minor>\\d+))?(\\.(?<patch>\\d+))?(?:\\+(?<compatibility>.*))?$"
+    },
+    {
+      "description": "Correct NeoForge version handling",
+      "matchPackageNames": ["net.neoforged:neoforge"],
+      "versioning": "regex:^(?<compatibility>(\\d+\\.){2})(?<minor>\\d+)(-beta)?$"
     }
   ]
 }
