--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -69,6 +69,8 @@ junit-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 junit-params = { module = "org.junit.jupiter:junit-jupiter-params" }
 stylecheck = "ca.stellardrift:stylecheck:0.2.1"
 vineflower = { module = "org.vineflower:vineflower", version.ref = "vineflower" }
+build-indra-crossdoc = { module = "net.kyori:indra-crossdoc", version.ref = "indra" }
+build-indra = { module = "net.kyori:indra-common", version.ref = "indra" }
 
 # For Renovate, do not use directly
 zCheckstyle = { module = "com.puppycrawl.tools:checkstyle", version.ref = "checkstyle" }
@@ -79,11 +81,11 @@ eclipseApt = "com.diffplug.eclipse.apt:4.0.1"
 loom = "fabric-loom:1.7.2"
 # ModDevGradle settings plugin is putting another version on the classpath, so we can't specify a version :(
 ideaExt = { id = "org.jetbrains.gradle.plugin.idea-ext" }
-indra = { id = "net.kyori.indra", version.ref = "indra" }
+indra = { id = "net.kyori.indra" }
 indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
-indra-checkstyle = { id = "net.kyori.indra.checkstyle", version.ref = "indra" }
-indra-publishing = { id = "net.kyori.indra.publishing", version.ref = "indra" }
-indra-crossdoc = { id = "net.kyori.indra.crossdoc", version.ref = "indra" }
+indra-checkstyle = { id = "net.kyori.indra.checkstyle" }
+indra-publishing = { id = "net.kyori.indra.publishing" }
+indra-crossdoc = { id = "net.kyori.indra.crossdoc" }
 indra-sonatype = { id = "net.kyori.indra.publishing.sonatype", version.ref = "indra" }
 nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version = "2.0.0" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
