rename fabric tester for clarity

--- a/fabric/src/testmod/resource-templates/fabric.mod.yaml
+++ b/fabric/src/testmod/resource-templates/fabric.mod.yaml
@@ -12,7 +12,7 @@ license: "MIT"
 
 entrypoints:
   main:
-    - "net.kyori.adventure.platform.test.fabric.AdventureTester"
+    - "net.kyori.adventure.platform.test.fabric.AdventureFabricTester"
 mixins:
   - "adventure-platform-fabric-testmod.mixins.json"
 
