--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ minecraft = "1.21"
 parchment = "1.20.6:2024.06.02"
 vineflower = "1.10.1"
 spotless = "6.25.0"
-neoforge = "21.0.139-beta"
+neoforge = "21.0.148"
 neoform = "1.21-20240613.152323"
 
 [libraries]
