--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=net.kyori
-version=6.0.0-SNAPSHOT
+version=6.0.0
 description=Integration between the adventure library and Minecraft: Java Edition, using the Fabric and NeoForge modding systems
 
 javadocPublishRoot=https://jd.advntr.dev/platform/
