chore(build): Reference Kyori org keys

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ allprojects {
     mitLicense()
     checkstyle(libs.versions.checkstyle.get())
 
+    signWithKeyFromPrefixedProperties("kyori")
     configurePublications {
       pom {
         developers {
