--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           publishing_branch_regex: '(?:(?:(?:mc\/)?(\d+(?:\.\d+)*(?:\.x)?)))'
           gradle_warning_mode: "all"
       - name: "prime gradle build"
-        run: "./gradlew generateTemplates generateTestmodTemplates --stacktrace" # Bonk loom
+        run: "./gradlew --no-daemon generateTemplates generateTestmodTemplates --stacktrace" # Bonk loom
       - name: "run gradle build"
         run: "./gradlew build --stacktrace"
       - name: "archive test results"
